--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -40,7 +40,7 @@
   transition: all 0.35s ease;
   height: 2px;
   width: 35%;
-  background-color: var(--Color-Bleu-Clair);
+  background-color: var(--Color-Orange);
   position: absolute;
   content: '';
   opacity: 0;
